Fix modal on mobiles

--- a/css/gifts.css
+++ b/css/gifts.css
@@ -196,7 +196,13 @@ dialog::backdrop {
 
 .modal-open {
   overflow: hidden;
-  width: 100%;
+  position: relative;
+  height: 100%;
+}
+
+html.modal-open {
+  overflow: hidden;
+  height: 100%;
 }
 
 @media (width >= 768px) and (width < 1440px ) {
